# winnonah

./: .dockerignore  .env.example  .gitignore  .justfile  .npmrc  AGENTS.md  CLAUDE.md  Dockerfile  biome.jsonc  components.json  docker-compose.primary.yml  docker-compose.standby.yaml  docker-compose.standby.yml  docker-compose.yaml  drizzle.config.ts  lefthook.yml  loki-config.yaml  mise.toml  next.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  promtail-config.yaml  renovate.json  start-database.sh  tsconfig.json
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: build-check.yaml  build.yaml
caddy/: Caddyfile  maintenance.html
docs-site/: Dockerfile  docusaurus.config.ts  mise.toml  package.json
docs-site/docs/: getting-started.mdx
docs-site/src/pages/: index.module.css  index.tsx
failover/: failback.sh  failover.sh  mysql-replication-init.sh  standby-poll.sh  sync-auth-cache.sh
grafana/: dashboards.yaml
grafana/dashboards/: logs.json
mysql/: init-primary.sh  primary.cnf  standby.cnf
python/: .dockerignore  .gitignore  Dockerfile  api.py  appointment_reminders.py  categorize_documents.py  conftest.py  fax_categorization.py  get_token.py  greeter_proxy.py  main.py  migrate_drive.py  notes.md  notify_reports.py  pyproject.toml  referral_fax_intake.py
python/docker/scripts/: cron-winnonah-python.sh  entrypoint-winnonah-python.sh
python/tests/: test_api.py  test_appointment_reminders.py  test_appointments.py  test_categorize_documents.py  test_clients.py  test_config.py  test_document_categorizer.py  test_fax.py  test_forms.py  test_location.py  test_main.py  test_misc.py  test_referrals.py  test_relationships.py  test_spreadsheets.py  test_webdriving.py  test_webhook.py
python/tests/integration/: test_appointment_reminders_quiet_window.py  test_client_database.py  test_drive.py
python/utils/: appointments.py  asana.py  clients.py  config.py  constants.py  database.py  document_categorizer.py  download_ta.py  fax.py  fax_close.py  fax_reports.py  forms.py  google.py  location.py  medicaid.py  misc.py  openphone.py  referrals.py  relationships.py  selenium.py  spreadsheets.py  summarizer.py  task_tracker.py  therapyappointment.py  webdriving.py  webhook.py
redirect/: index.html
scripts/: calculate-office-move-impact.ts  cleanup-no-link-grabbed-failures.ts  find-unparsable-precert-memos.ts  import-note-titles.ts  import-school-districts.ts  migrate-asana-notes.ts  migrate-punchlist-records.ts  seed-insurances.ts  seed-questionnaire-rules.ts  seed-questionnaire-types.ts  setup-mise.sh
src/: env.js  mdx-components.tsx
src/app/: layout.tsx  page.tsx  providers.tsx
src/app/_components/: Client.tsx  ClientsList.tsx  ClientsSearchForm.tsx  Header.tsx  QuestionnaireForm.tsx  RichTextEditor.tsx  addAsanaIdButton.tsx  apiButton.tsx  asanaEditor.tsx  client.tsx  clients.tsx  errorAlert.tsx  errorsList.tsx  issuesAlert.tsx  issuesList.tsx  questionnaireForm.tsx  richTextEditor.tsx  searchForm.tsx  searchParams.tsx
src/app/_context/: ClientLoadingContext.tsx
src/app/availability/: page.tsx
src/app/calculator/: page.tsx
src/app/claim-reports/: page.tsx
src/app/dashboard/: page.tsx
src/app/day-ahead/: page.tsx
src/app/docs/: layout.tsx
src/app/errors/: page.tsx
src/app/evaluator-availability/: page.tsx
src/app/evaluator-dashboard/: page.tsx
src/app/fax-categorization/: page.tsx
src/app/issues/: page.tsx
src/app/login/: page.tsx
src/app/qsuite-config/: page.tsx
src/app/referral-faxes/: page.tsx
src/app/scheduling/: page.tsx
src/app/scheduling-helper/: page.tsx
src/app/settings/: page.tsx
src/app/work-summary/: page.tsx
src/hooks/: use-check-permission.ts  use-media-query.ts
src/lib/: api-types.ts  billing.ts  cache.ts  colors.ts  constants.ts  dashboard.ts  diff-utils.ts  docs.ts  google.ts  home-widgets.ts  insurance-notes-merge.ts  logger.ts  models.ts  quo.ts  redis.ts  scheduling-colors.ts  scramble-text.ts  types.ts  utils.ts  validations.ts
src/lib/validations/: availability.ts  config.ts  reminders.ts
src/server/: questionnaire-age.ts  systemEmitter.ts
src/styles/: globals.css
src/trpc/: react.tsx
worker/: index.js  wrangler.toml
(+253 files in other folders)
