[project]
name = "winnonah-python"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=46.0.3",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "geopandas>=1.1.1",
    "geopy>=2.4.1",
    "google-api-python-client>=2.169.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "huggingface-hub>=1.3.5",
    "llama-cpp-python>=0.3.16",
    "loguru>=0.7.3",
    "nameparser>=1.1.3",
    "numpy>=2.3.1",
    "pandas>=2.2.3",
    "pdf2image>=1.17.0",
    "pymysql>=1.1.1",
    "pypdf>=6.6.2",
    "pytesseract>=0.3.13",
    "python-multipart>=0.0.22",
    "selenium>=4.33.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = ["icecream>=2.1.4", "ruff>=0.12.8"]

[tool.ruff.lint]
select = ["UP", "FURB"]

[tool.ruff.lint.pydocstyle]
convention = "google"
