[project]
name = "winnonah-python"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
  "dotenv>=0.9.9",
  "fastapi>=0.135.3",
  "geocodio-library-python>=0.7.0",
  "geopandas>=1.1.1",
  "geopy>=2.4.1",
  "google>=3.0.0",
  "google-api-python-client>=2.169.0",
  "google-auth-oauthlib>=1.2.2",
  "loguru>=0.7.3",
  "nameparser>=1.1.3",
  "numpy>=2.4.4",
  "pandas>=3.0.2",
  "pydantic>=2.12.5",
  "pymysql[rsa]>=1.1.1",
  "python-dateutil>=2.9.0.post0",
  "requests>=2.33.0",
  "selenium>=4.33.0",
  "shapely>=2.1.2",
  "tqdm>=4.67.1",
  "typer>=0.24.1",
]

[dependency-groups]
dev = [
  "deptry>=0.25.1",
  "icecream>=2.2.0",
  "ruff>=0.12.8",
  "uvicorn>=0.44.0",
]

[tool.ruff.lint]
select = ["UP", "FURB"]

[tool.ruff.lint.pydocstyle]
convention = "google"
