[project]
name = "winnonah-python"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.135.3",
  "geocodio-library-python>=0.7.0",
  "geopandas>=1.1.1",
  "geopy>=2.4.1",
  "google>=3.0.0",
  "google-api-python-client>=2.169.0",
  "google-auth-oauthlib>=1.2.2",
  "httpx>=0.28.1",
  "huggingface-hub>=1.22.0",
  "llama-cpp-python>=0.3.33",
  "loguru>=0.7.3",
  "nameparser>=1.3.0",
  "numpy>=2.4.4",
  "pandas>=3.0.2",
  "pillow>=12.3.0",
  "pydantic>=2.12.5",
  "pymupdf>=1.28.0",
  "pymysql[rsa]>=1.1.2",
  "pytesseract>=0.3.13",
  "python-dateutil>=2.9.0.post0",
  "python-dotenv>=1.2.2",
  "requests>=2.33.1",
  "selenium>=4.33.0",
  "shapely>=2.1.2",
  "tqdm>=4.67.1",
  "typer>=0.24.1",
]

[dependency-groups]
dev = [
  "deptry>=0.25.1",
  "icecream>=2.2.0",
  "pytest>=8.4.0",
  "pytest-cov>=7.0.0",
  "ruff>=0.15.10",
  "uvicorn>=0.44.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov --cov-context=test --cov-report=html"

[tool.coverage.run]
source = ["."]
omit = ["tests/*", ".venv/*", "conftest.py"]

[tool.coverage.html]
show_contexts = true

[tool.ruff.lint]
select = [
  "ERA",
  "B",
  "A",
  "C4",
  "FA",
  "ICN",
  "PIE",
  "T20",
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SIM",
  "ARG",
  "PTH",
  "FLY",
  "I",
  "PD",
  "N",
  "PERF",
  "E",
  "W",
  "F",
  "PL",
  "UP",
  "FURB",
  "RUF",
]

ignore = [
  "E501",  # line too long
  "PLR0911",  # too many return statements ({returns} > {max_returns})
  "PLR0912",  # too many branches ({branches} > {max_branches})
  "PLR0913",  # too many arguments to function call ({c_args} > {max_args})
  "PLR0915",  # too many statements ({statements} > {max_statements})
  "PLR2004",  # magic value used in comparison, consider replacing {value} with a constant variable
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-bugbear]
# Allow default arguments like, e.g., `data: List[str] = fastapi.Query(None)`.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.deptry]
extend_exclude = ["^conftest\\.py$"]

[tool.deptry.per_rule_ignores]
# Not imported directly - llama_cpp.Llama.from_pretrained() imports it
# internally at runtime to download models from the HF hub.
DEP002 = ["huggingface-hub"]

[[tool.uv.index]]
name = "llama-cpp-python-cpu"
url = "https://abetlen.github.io/llama-cpp-python/whl/cpu"
explicit = true

[tool.uv.sources]
llama-cpp-python = { index = "llama-cpp-python-cpu" }
